<resources>
    <string name="app_name">NibhaMaharjan_MAPD711_Assignment4</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="MAPS_API_KEY">AIzaSyB3tnU5wNSEnNoKVP0b78iKo5SJtXBa6T4</string>

</resources>